--- a/eight.html
+++ b/eight.html
@@ -23,8 +23,8 @@
                 miejsce jest moim cyfrowym notatnikiem. </p>
         </section>
         <ul class="menu__list">
-            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">pierwszy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">rozdział
+                        pierwszy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Warstwy</li>
                         <li class="menu__item">HTML</li>
@@ -32,8 +32,8 @@
                         <li class="menu__item">Programowanie</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">drugi
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">rozdział
+                        drugi</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Organizacja nauki/pracy</li>
                         <li class="menu__item">HTML - znaczniki i atrybuty</li>
@@ -43,8 +43,8 @@
                         <li class="menu__item">Terminal</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">trzeci
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">rozdział
+                        trzeci</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Git</li>
                         <li class="menu__item">Box model</li>
@@ -52,8 +52,8 @@
                         <li class="menu__item">DOM</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">czwarty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">rozdział
+                        czwarty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">JavaScript</li>
                         <li class="menu__item">Funkcja w JS</li>
@@ -64,8 +64,8 @@
                         <li class="menu__item">Tło</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">piąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">rozdział
+                        piąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Formularze</li>
                         <li class="menu__item">Grid</li>
@@ -74,8 +74,8 @@
                         <li class="menu__item">Hamburger</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">szósty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">rozdział
+                        szósty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Obiekty</li>
                         <li class="menu__item">Pseudo*</li>
@@ -84,8 +84,8 @@
                         <li class="menu__item">Starter kit</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">siódmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">rozdział
+                        siódmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Prefiksy</li>
                         <li class="menu__item">Google fonts</li>
@@ -96,8 +96,8 @@
                         <li class="menu__item">Dane</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">ósmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">rozdział
+                        ósmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Przejścia</li>
                         <li class="menu__item">Animacje</li>
@@ -107,8 +107,8 @@
                         <li class="menu__item">PWA</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">dziewiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">rozdział
+                        dziewiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">API</li>
                         <li class="menu__item">CSS</li>
@@ -116,16 +116,34 @@
                         <li class="menu__item">Typografia</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">dziesiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">rozdział
+                        dziesiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Multimedia</li>
                         <li class="menu__item">Bootstrap</li>
                         <li class="menu__item">Kombinatory</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">jedenasty
-                        tydzień</strong></a></li>
+            <li class="menu__item"><a class="menu__link" href="dev-tools.html"><strong class="strong__header">Dev
+                        tools</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">Do poczytania</li>
+                        <li class="menu__item">Dokumentacja</li>
+                        <li class="menu__item">Narzędzia</li>
+                        <li class="menu__item">Do obejrzenia</li>
+                        <li class="menu__item">Lista frontendu</li>
+                    </ul>
+                </a></li>
+            <li class="menu__item"><a class="menu__link" href="game.html"><strong class="strong__header">Dev
+                        game</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">CODE COMBAT</li>
+                        <li class="menu__item">CSS Diner</li>
+                        <li class="menu__item">Flexbox Froggy</li>
+                        <li class="menu__item">Grid Garden</li>
+                        <li class="menu__item">Codewars</li>
+                    </ul>
+                </a></li>
         </ul>
     </nav>
     <main class="main">
@@ -147,12 +165,13 @@
                     </ul>
                 </nav>
             </header>
-            <h2 class="article__header">Ósmy tydzień nauki</h2>
+            <h2 class="article__header">Rozdział ósmy</h2>
             <div class="wrapper">
                 <section class="section" id="transition">
                     <h3 class="section__header">Przejścia</h3>
-                    <code class="section__code">transition: name duration timing-function delay
-                    </code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-css section__code">transition: name duration timing-function delay
+                    </code></pre>
                     <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/transition"
                         class="section__link">https://developer.mozilla.org/en-US/docs/Web/CSS/transition</a>
                     <div class="section__resp-container">
@@ -167,10 +186,11 @@
                     <p class="section__paragraph">Nie animujemy właściwości position <strong>top, right, bottom,
                             left</strong>.
                         Do zmian stanu, pozycji elementu używamy <strong>transform</strong>.</p>
-                    <code class="section__code">transform:rotate() <br>
-                        transform:scale() <br>
-                        transform:translate() <br>
-                    </code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-css section__code">transform:rotate()
+                        transform:scale()
+                        transform:translate()
+                    </code></pre>
                     <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/transform"
                         class="section__link">https://developer.mozilla.org/en-US/docs/Web/CSS/transform</a>
                 </section>
@@ -179,13 +199,31 @@
                     <p class="section__paragraph"><strong>animation: @keyframes duration | timing-function | delay |
                             iteration-count | direction | fill-mode | play-state | name</strong> - wykorzystanie
                         animacji</p>
-                    <code class="section__code">animation: backgroundChange 3s ease-in 1s infinite reverse both
-                        running;</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-css section__code">animation: backgroundChange 3s ease-in 1s infinite reverse both
+                        running;</code></pre>
                     <p class="section__paragraph">Definiowanie animacji:</p>
-                    <code class="section__code">@keyframes backgroundChange { <br> from { <br> background: red; <br> }
-                        <br> to { <br> background: green; <br> } <br>}</code>
-                    <code class="section__code">@keyframes backgroundChange { <br> 0% { <br> background: red; <br> }
-                        <br> 50% { <br> background: green; <br> } <br>100% { <br> background: blue; <br> } <br>}</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-css section__code">@keyframes backgroundChange { 
+                        from { 
+                            background: red; 
+                            }
+                        to { 
+                            background: green; 
+                            }
+                        }</code></pre>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-css section__code">@keyframes backgroundChange { 
+                        0% { 
+                            background: red; 
+                            }
+                        50% { 
+                            background: green; 
+                            } 
+                        100% { 
+                             background: blue; 
+                             }
+                        }</code></pre>
                     <div class="section__resp-container">
                         <iframe class="section__resp-iframe" src="https://www.youtube.com/embed/FNmv5uh3ni4"
                             allow="encrypted-media" allowfullscreen></iframe>
