--- a/second.html
+++ b/second.html
@@ -23,8 +23,8 @@
                 miejsce jest moim cyfrowym notatnikiem. </p>
         </section>
         <ul class="menu__list">
-            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">pierwszy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">rozdział
+                        pierwszy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Warstwy</li>
                         <li class="menu__item">HTML</li>
@@ -32,8 +32,8 @@
                         <li class="menu__item">Programowanie</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">drugi
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">rozdział
+                        drugi</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Organizacja nauki/pracy</li>
                         <li class="menu__item">HTML - znaczniki i atrybuty</li>
@@ -43,8 +43,8 @@
                         <li class="menu__item">Terminal</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">trzeci
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">rozdział
+                        trzeci</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Git</li>
                         <li class="menu__item">Box model</li>
@@ -52,8 +52,8 @@
                         <li class="menu__item">DOM</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">czwarty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">rozdział
+                        czwarty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">JavaScript</li>
                         <li class="menu__item">Funkcja w JS</li>
@@ -64,8 +64,8 @@
                         <li class="menu__item">Tło</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">piąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">rozdział
+                        piąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Formularze</li>
                         <li class="menu__item">Grid</li>
@@ -74,8 +74,8 @@
                         <li class="menu__item">Hamburger</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">szósty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">rozdział
+                        szósty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Obiekty</li>
                         <li class="menu__item">Pseudo*</li>
@@ -84,8 +84,8 @@
                         <li class="menu__item">Starter kit</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">siódmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">rozdział
+                        siódmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Prefiksy</li>
                         <li class="menu__item">Google fonts</li>
@@ -96,8 +96,8 @@
                         <li class="menu__item">Dane</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">ósmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">rozdział
+                        ósmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Przejścia</li>
                         <li class="menu__item">Animacje</li>
@@ -107,8 +107,8 @@
                         <li class="menu__item">PWA</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">dziewiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">rozdział
+                        dziewiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">API</li>
                         <li class="menu__item">CSS</li>
@@ -116,16 +116,34 @@
                         <li class="menu__item">Typografia</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">dziesiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">rozdział
+                        dziesiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Multimedia</li>
                         <li class="menu__item">Bootstrap</li>
                         <li class="menu__item">Kombinatory</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">jedenasty
-                        tydzień</strong></a></li>
+            <li class="menu__item"><a class="menu__link" href="dev-tools.html"><strong class="strong__header">Dev
+                        tools</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">Do poczytania</li>
+                        <li class="menu__item">Dokumentacja</li>
+                        <li class="menu__item">Narzędzia</li>
+                        <li class="menu__item">Do obejrzenia</li>
+                        <li class="menu__item">Lista frontendu</li>
+                    </ul>
+                </a></li>
+            <li class="menu__item"><a class="menu__link" href="game.html"><strong class="strong__header">Dev
+                        game</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">CODE COMBAT</li>
+                        <li class="menu__item">CSS Diner</li>
+                        <li class="menu__item">Flexbox Froggy</li>
+                        <li class="menu__item">Grid Garden</li>
+                        <li class="menu__item">Codewars</li>
+                    </ul>
+                </a></li>
         </ul>
     </nav>
     <main class="main">
@@ -152,7 +170,7 @@
                     </ul>
                 </nav>
             </header>
-            <h2 class="article__header">Drugi tydzień nauki</h2>
+            <h2 class="article__header">Rozdział drugi</h2>
             <div class="wrapper">
                 <section class="section" id="work">
                     <h3 class="section__header">Planowanie pracy</h3>
@@ -207,10 +225,11 @@
                         podkreślenia
                         wypowiedzi</p>
                     <p class="section__paragraph">&lt;a&gt;...&lt;/a&gt; - linki, łącza wewnątrz dokumentu</p>
-                    <code class="section__code">&lt;a href="ścieżka docelowej treści" target=""&gt;opis
-                        łącza&lt;/a&gt;</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-html section__code">&lt;a href="ścieżka docelowej treści" target=""&gt;opis łącza&lt;/a&gt;</code> </pre>
                     <p class="section__paragraph">atrybut id - identyfikuje element</p>
-                    <code class="section__code">&lt;element id="moj-identyfikator"&gt;</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-html section__code">&lt;element id="moj-identyfikator"&gt;</code></pre>
                     <p class="section__paragraph">&lt;br&gt; - przejście do nowej lini</p>
                     <p class="section__paragraph">&lt;img src="ścieżka do obrazka" alt="opis co przedstawia
                         obrazek"&gt;
@@ -240,10 +259,11 @@
                         ponieważ przy większym
                         projekcie można się pogubić oraz mieć problemy z odpowiednim wyszukaniem, doborem selektora.
                     </p>
-                    <code class="section__code">main section article p {<br>
-                        właściwość: wartość;<br>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-css section__code">main section article p {
+                        właściwość: wartość;
                         }
-                    </code>
+                    </code></pre>
                     <p class="section__paragraph">Stylowanie za pomocą klas - jest to zalecana metoda. Nazewnictwo
                         klas
                         stosujemy w języku
@@ -262,17 +282,19 @@
                             <li>staraj się, żeby element miał jedną klasę</li>
                         </ul>
                     </section>
-                    <code class="section__code">&lt;znacznik class="name'&gt;treść&lt;/znacznik&gt;<br>.name
-                        {<br>właściwość:
-                        wartość;<br>}</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-css section__code">&lt;znacznik class="name'&gt;treść&lt;/znacznik&gt;
+
+                        .name {
+                            właściwość: wartość;
+                        }</code></pre>
                     <p class="section__paragraph">Styl przy znaczniku HTML z wykorzystaniem atrybutu "style" - takie
                         stylowanie nie jest dobrą
                         praktyką.</p>
-                    <code class="section__code">&lt;znacznik style="color:blue;"&gt;treść&lt;/znacznik&gt;</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-html section__code">&lt;znacznik style="color:blue;"&gt;treść&lt;/znacznik&gt;</code></pre>
                     <p class="section__paragraph">Styl w znaczniku "style"- z takim stylowaniem możemy się spotkać,
-                        jednak
-                        najczęściej najlepszym
-                        wyborem jest używanie stylów w osobnym pliku "style.css".</p>
+                        jednak najczęściej najlepszym wyborem jest używanie stylów w osobnym pliku "style.css".</p>
                     <img class="image" src="img/style-markup.webp" alt="przykład stylów w znaczniku style">
                     <p class="section__paragraph section__paragraph--position">Style osadzone w zanczniku "style".
                     </p>
@@ -336,15 +358,14 @@
                         ale podobnie jak style można załączać je w znaczniku <strong> &lt;script&gt;</strong> </p>
                     <section class="card">
                         <h4 class="card__header">Pierwszy kod</h4>
-                        <code class="card__code">alert('Witaj w moim notatniku, śmiało wchłaniaj wiedzę w nim
-                            zapisną!!!');</code>
+                        <pre class="data-pre data-pre--white-space">
+                        <code class="language-js card__code">alert('Witaj w moim notatniku, śmiało wchłaniaj wiedzę w nim zapisną!!!');</code></pre>
                     </section>
                     <p class="section__paragraph">
                         Funkcja console.log jest twoim przyjacielem. Często będziesz tą funkcję
                         wykorzystywał/wykorzystywała jako pomocy przy tworzeniu kodu. <br>
-                        <code class="section__code">console.log('Witaj w moim notatniku, śmiało wchłaniaj wiedzę w
-                            nim
-                            zapisną!!!');</code>
+                        <pre class="data-pre data-pre--white-space">
+                        <code class="language-js section__code">console.log('Witaj w moim notatniku, śmiało wchłaniaj wiedzę w nim zapisną!!!');</code></pre>
                     </p>
                     <p class="section__paragraph">Zmienna to takie pudełko do przechowywania różnych danych</p>
                     <p class="section__paragraph">Zmienne definiujemy za pomocą słów kluczowych var, let i const.
