--- a/third.html
+++ b/third.html
@@ -23,8 +23,8 @@
                 miejsce jest moim cyfrowym notatnikiem. </p>
         </section>
         <ul class="menu__list">
-            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">pierwszy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">rozdział
+                        pierwszy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Warstwy</li>
                         <li class="menu__item">HTML</li>
@@ -32,8 +32,8 @@
                         <li class="menu__item">Programowanie</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">drugi
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">rozdział
+                        drugi</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Organizacja nauki/pracy</li>
                         <li class="menu__item">HTML - znaczniki i atrybuty</li>
@@ -43,8 +43,8 @@
                         <li class="menu__item">Terminal</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">trzeci
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">rozdział
+                        trzeci</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Git</li>
                         <li class="menu__item">Box model</li>
@@ -52,8 +52,8 @@
                         <li class="menu__item">DOM</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">czwarty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">rozdział
+                        czwarty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">JavaScript</li>
                         <li class="menu__item">Funkcja w JS</li>
@@ -64,8 +64,8 @@
                         <li class="menu__item">Tło</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">piąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">rozdział
+                        piąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Formularze</li>
                         <li class="menu__item">Grid</li>
@@ -74,8 +74,8 @@
                         <li class="menu__item">Hamburger</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">szósty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">rozdział
+                        szósty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Obiekty</li>
                         <li class="menu__item">Pseudo*</li>
@@ -84,8 +84,8 @@
                         <li class="menu__item">Starter kit</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">siódmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">rozdział
+                        siódmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Prefiksy</li>
                         <li class="menu__item">Google fonts</li>
@@ -96,8 +96,8 @@
                         <li class="menu__item">Dane</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">ósmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">rozdział
+                        ósmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Przejścia</li>
                         <li class="menu__item">Animacje</li>
@@ -107,8 +107,8 @@
                         <li class="menu__item">PWA</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">dziewiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">rozdział
+                        dziewiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">API</li>
                         <li class="menu__item">CSS</li>
@@ -116,16 +116,34 @@
                         <li class="menu__item">Typografia</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">dziesiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">rozdział
+                        dziesiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Multimedia</li>
                         <li class="menu__item">Bootstrap</li>
                         <li class="menu__item">Kombinatory</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">jedenasty
-                        tydzień</strong></a></li>
+            <li class="menu__item"><a class="menu__link" href="dev-tools.html"><strong class="strong__header">Dev
+                        tools</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">Do poczytania</li>
+                        <li class="menu__item">Dokumentacja</li>
+                        <li class="menu__item">Narzędzia</li>
+                        <li class="menu__item">Do obejrzenia</li>
+                        <li class="menu__item">Lista frontendu</li>
+                    </ul>
+                </a></li>
+            <li class="menu__item"><a class="menu__link" href="game.html"><strong class="strong__header">Dev
+                        game</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">CODE COMBAT</li>
+                        <li class="menu__item">CSS Diner</li>
+                        <li class="menu__item">Flexbox Froggy</li>
+                        <li class="menu__item">Grid Garden</li>
+                        <li class="menu__item">Codewars</li>
+                    </ul>
+                </a></li>
         </ul>
     </nav>
     <main class="main">
@@ -145,7 +163,7 @@
                     </ul>
                 </nav>
             </header>
-            <h2 class="article__header">Trzeci tydzień nauki</h2>
+            <h2 class="article__header">Rozdział trzeci</h2>
 
             <div class="wrapper">
                 <section class="section" id="git">
@@ -218,7 +236,8 @@
                         <p class="card__paragraph">Niektóre właściwości posiadają zapis pełny oraz skrócony
                             (shorthand).
                         </p>
-                        <code class="card__code">
+                        <pre class="data-pre data-pre--white-space">
+                        <code class="language-css card__code">
                             padding-top: 5px; <br>
                             padding-right: 5px; <br>
                             padding-bottom: 5px; <br>
@@ -226,7 +245,7 @@
                             padding: 5px 5px 5px 5px; - pełny zapis <br><br>
                             padding: top right bottom left; <br><br>
                             padding: 5px; - zapis skrócony
-                        </code>
+                        </code></pre>
                     </section>
                     <section class="card">
                         <h4 class="card__header">Jednostki</h4>
@@ -285,11 +304,14 @@
                         </ul>
                         <p class="card__paragraph">Modyfikacja treści</p>
                         <ul class="card__list">
-                            <li>innerHTML - zwraca treść bez HTML <br> <code class="card__code">const content =
-                                    document.querySelector('p'); <br><br>console.log(content.innerHTML);</code></li>
-                            <li>innerHTML = 'treść' - modyfikuję treść, elementy HTML<br> <code class="card__code">const
-                                    content = document.querySelector('p'); <br><br>content.innerHTML =
-                                    '&lt;strong&gt;nowa&lt;/strong&gt;treść';</code></li>
+                            <li>innerHTML - zwraca treść bez HTML <br>
+                                <pre class="data-pre data-pre--white-space"><code class="language-js card__code">const content = document.querySelector('p');
+                                    console.log(content.innerHTML);</code></pre>
+                            </li>
+                            <li>innerHTML = 'treść' - modyfikuję treść, elementy HTML<br>
+                                <pre class="data-pre data-pre--white-space"><code class="language-js card__code">const content = document.querySelector('p'); 
+                                    content.innerHTML ='&lt;strong&gt;nowa&lt;/strong&gt;treść';</code></pre>
+                            </li>
                         </ul>
                     </section>
                 </section>
