--- a/fifth.html
+++ b/fifth.html
@@ -24,8 +24,8 @@
                 miejsce jest moim cyfrowym notatnikiem. </p>
         </section>
         <ul class="menu__list">
-            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">pierwszy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">rozdział
+                        pierwszy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Warstwy</li>
                         <li class="menu__item">HTML</li>
@@ -33,8 +33,8 @@
                         <li class="menu__item">Programowanie</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">drugi
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">rozdział
+                        drugi</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Organizacja nauki/pracy</li>
                         <li class="menu__item">HTML - znaczniki i atrybuty</li>
@@ -44,8 +44,8 @@
                         <li class="menu__item">Terminal</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">trzeci
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">rozdział
+                        trzeci</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Git</li>
                         <li class="menu__item">Box model</li>
@@ -53,8 +53,8 @@
                         <li class="menu__item">DOM</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">czwarty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">rozdział
+                        czwarty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">JavaScript</li>
                         <li class="menu__item">Funkcja w JS</li>
@@ -65,8 +65,8 @@
                         <li class="menu__item">Tło</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">piąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">rozdział
+                        piąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Formularze</li>
                         <li class="menu__item">Grid</li>
@@ -75,8 +75,8 @@
                         <li class="menu__item">Hamburger</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">szósty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">rozdział
+                        szósty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Obiekty</li>
                         <li class="menu__item">Pseudo*</li>
@@ -85,8 +85,8 @@
                         <li class="menu__item">Starter kit</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">siódmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">rozdział
+                        siódmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Prefiksy</li>
                         <li class="menu__item">Google fonts</li>
@@ -97,8 +97,8 @@
                         <li class="menu__item">Dane</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">ósmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">rozdział
+                        ósmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Przejścia</li>
                         <li class="menu__item">Animacje</li>
@@ -108,8 +108,8 @@
                         <li class="menu__item">PWA</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">dziewiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">rozdział
+                        dziewiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">API</li>
                         <li class="menu__item">CSS</li>
@@ -117,16 +117,34 @@
                         <li class="menu__item">Typografia</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">dziesiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">rozdział
+                        dziesiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Multimedia</li>
                         <li class="menu__item">Bootstrap</li>
                         <li class="menu__item">Kombinatory</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">jedenasty
-                        tydzień</strong></a></li>
+            <li class="menu__item"><a class="menu__link" href="dev-tools.html"><strong class="strong__header">Dev
+                        tools</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">Do poczytania</li>
+                        <li class="menu__item">Dokumentacja</li>
+                        <li class="menu__item">Narzędzia</li>
+                        <li class="menu__item">Do obejrzenia</li>
+                        <li class="menu__item">Lista frontendu</li>
+                    </ul>
+                </a></li>
+            <li class="menu__item"><a class="menu__link" href="game.html"><strong class="strong__header">Dev
+                        game</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">CODE COMBAT</li>
+                        <li class="menu__item">CSS Diner</li>
+                        <li class="menu__item">Flexbox Froggy</li>
+                        <li class="menu__item">Grid Garden</li>
+                        <li class="menu__item">Codewars</li>
+                    </ul>
+                </a></li>
         </ul>
     </nav>
     <main class="main">
@@ -147,7 +165,7 @@
                     </ul>
                 </nav>
             </header>
-            <h2 class="article__header">Piąty tydzień nauki</h2>
+            <h2 class="article__header">Rozdział piąty</h2>
             <div class="wrapper">
                 <section class="section" id="form">
                     <h3 class="section__header">Formularze</h3>
@@ -179,8 +197,10 @@
                             <li><strong>number</strong> - do wprowadzania liczb</li>
                             <li><strong>tel</strong> - do numeru telefonu</li>
                             <li><strong>email</strong> - adres email</li>
-                            <li><strong>range</strong> - wprowadzenie wartości liczbowej z danego przedziału<br><code
-                                    class="card__code">&lt;input type="range" min="0" max="100" step="5"&gt;</code>
+                            <li><strong>range</strong> - wprowadzenie wartości liczbowej z danego przedziału<br>
+                                <pre
+                                    class="data-pre data-pre--white-space"><code
+                                    class="language-html card__code">&lt;input type="range" min="0" max="100" step="5"&gt;</code></pre>
                             </li>
                             <li><strong>password</strong> - do wprowadzania haseł</li>
                             <li><strong>file</strong> - wybór pliku</li>
@@ -227,10 +247,12 @@
                             <li><strong>grid-column-gap</strong> - odstęp między elementami w kontekście kolumny</li>
                             <li><strong>grid-row-gap</strong> - odstęp między elementami w kontekście wierszy</li>
                             <li><strong>grid-template-areas</strong> - umieszczanie elementów za pomocą nazwanych
-                                obszarów <code class="card__code">grid-template-areas:"header header header" <br>
-                                    "content . menu" <br>
+                                obszarów
+                                <pre class="data-pre data-pre--white-space"><code class="language-css card__code">grid-template-areas:"header header header"
+                                    "content . menu"
                                     "footer footer footer";
-                                </code></li>
+                                </code></pre>
+                            </li>
                         </ul>
                         <p class="card__paragraph">Grid item</p>
                         <ul class="card__list">
@@ -266,12 +288,12 @@
                     </p>
                     <p class="section__paragarph"><strong>and / not / ,</strong> - operatory
                     </p>
-                    <code class="section__code">@media screen and (min-width: 812px) and (orientation: landscape){ <br>
-                        .header { <br>
-                        font-size: 1rem; <br>
-                        padding: 8px; <br>
-                        } <br>
-                        <br>}</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-css section__code">@media screen and (min-width: 812px) and (orientation: landscape){
+                        .header {
+                        font-size: 1rem;
+                        padding: 8px; 
+                        } </code></pre>
                 </section>
                 <section class="section" id="event">
                     <h3 class="section__header">Event</h3>
@@ -289,14 +311,17 @@
                             href="https://developer.mozilla.org/en-US/docs/Web/Events#Mouse_events">https://developer.mozilla.org/en-US/docs/Web/Events#Mouse_events</a>
                     </section>
                     <p class="section__paragraph">Przykłady:</p>
-                    <code class="section__code">function nameFunction() { <br>
-                        console.log('dajesz klika'); <br>
-                        } <br><br>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">function nameFunction() {
+                        console.log('dajesz klika');
+                        }
+
                         element.addEventListener('click', nameFunction);
-                    </code>
-                    <code class="section__code">element.addEventListener('click', (<strong>e</strong>) => { <br>
-                        console.log('dajesz klika'); <br>
-                        })</code>
+                    </code></pre>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">element.addEventListener('click', (<strong>e</strong>) => {
+                        console.log('dajesz klika');
+                        })</code></pre>
                     <p class="section__paragraph"><strong>e</strong> = Event</p>
                     <a class="section__link"
                         href="https://developer.mozilla.org/en-US/docs/Web/API/Event">https://developer.mozilla.org/en-US/docs/Web/API/Event</a>
