--- a/fourth.html
+++ b/fourth.html
@@ -23,8 +23,8 @@
                 miejsce jest moim cyfrowym notatnikiem. </p>
         </section>
         <ul class="menu__list">
-            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">pierwszy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">rozdział
+                        pierwszy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Warstwy</li>
                         <li class="menu__item">HTML</li>
@@ -32,8 +32,8 @@
                         <li class="menu__item">Programowanie</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">drugi
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">rozdział
+                        drugi</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Organizacja nauki/pracy</li>
                         <li class="menu__item">HTML - znaczniki i atrybuty</li>
@@ -43,8 +43,8 @@
                         <li class="menu__item">Terminal</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">trzeci
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">rozdział
+                        trzeci</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Git</li>
                         <li class="menu__item">Box model</li>
@@ -52,8 +52,8 @@
                         <li class="menu__item">DOM</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">czwarty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">rozdział
+                        czwarty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">JavaScript</li>
                         <li class="menu__item">Funkcja w JS</li>
@@ -64,8 +64,8 @@
                         <li class="menu__item">Tło</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">piąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">rozdział
+                        piąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Formularze</li>
                         <li class="menu__item">Grid</li>
@@ -74,8 +74,8 @@
                         <li class="menu__item">Hamburger</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">szósty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">rozdział
+                        szósty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Obiekty</li>
                         <li class="menu__item">Pseudo*</li>
@@ -84,8 +84,8 @@
                         <li class="menu__item">Starter kit</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">siódmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">rozdział
+                        siódmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Prefiksy</li>
                         <li class="menu__item">Google fonts</li>
@@ -96,8 +96,8 @@
                         <li class="menu__item">Dane</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">ósmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">rozdział
+                        ósmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Przejścia</li>
                         <li class="menu__item">Animacje</li>
@@ -107,8 +107,8 @@
                         <li class="menu__item">PWA</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">dziewiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">rozdział
+                        dziewiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">API</li>
                         <li class="menu__item">CSS</li>
@@ -116,16 +116,34 @@
                         <li class="menu__item">Typografia</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">dziesiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">rozdział
+                        dziesiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Multimedia</li>
                         <li class="menu__item">Bootstrap</li>
                         <li class="menu__item">Kombinatory</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">jedenasty
-                        tydzień</strong></a></li>
+            <li class="menu__item"><a class="menu__link" href="dev-tools.html"><strong class="strong__header">Dev
+                        tools</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">Do poczytania</li>
+                        <li class="menu__item">Dokumentacja</li>
+                        <li class="menu__item">Narzędzia</li>
+                        <li class="menu__item">Do obejrzenia</li>
+                        <li class="menu__item">Lista frontendu</li>
+                    </ul>
+                </a></li>
+            <li class="menu__item"><a class="menu__link" href="game.html"><strong class="strong__header">Dev
+                        game</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">CODE COMBAT</li>
+                        <li class="menu__item">CSS Diner</li>
+                        <li class="menu__item">Flexbox Froggy</li>
+                        <li class="menu__item">Grid Garden</li>
+                        <li class="menu__item">Codewars</li>
+                    </ul>
+                </a></li>
         </ul>
     </nav>
     <main class="main">
@@ -148,7 +166,7 @@
                     </ul>
                 </nav>
             </header>
-            <h2 class="article__header">Czwarty tydzień nauki</h2>
+            <h2 class="article__header">Rozdział czwarty</h2>
             <div class="wrapper">
                 <section class="section" id="js">
                     <h3 class="section__header">logika w JS</h3>
@@ -212,42 +230,63 @@
                     </table>
 
                     <p class="section__paragraph">Instrukcja warunkowa</p>
-                    <code class="section__code">if (warunek){<br>blok kodu <br>gdy warunek jest prawdziwy (true), to kod
-                        się wykona <br> }</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">if (warunek){
+                        blok kodu, gdy warunek jest prawdziwy (true), to kod się wykona
+                    }</code></pre>
                     <p class="section__paragraph">AND - wszystkie warunki muszą być true</p>
-                    <code class="section__code">if (warunek && warunek){<br>blok kodu <br>gdy wszystkie warunki są
-                        prawdziwe (true), to kod się wykona <br> }</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">if (warunek && warunek){
+                        gdy wszystkie warunki są prawdziwe (true), to kod się wykona
+                    }</code></pre>
                     <p class="section__paragraph">OR - przynajmniej jeden warunek ma być true</p>
-                    <code class="section__code">if (warunek || warunek){<br>blok kodu <br>gdy przynajmniej jeden warunek
-                        jest prawdziwy (true), to kod się wykona <br> }</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">if (warunek || warunek){
+                        gdy przynajmniej jeden warunek jest prawdziwy (true), to kod się wykona
+                    }</code></pre>
                     <p class="section__paragraph">NOT - odwraca wartość wyrażenia logicznego</p>
-                    <code class="section__code">if (!(warunek)){<br>!false => true <br>
-                        !true => false <br>
-                        blok kodu <br>gdy warunek jest prawdziwy (true),
-                        to kod się wykona <br> }</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">if (!(warunek)){
+                        !false => true
+                        !true => false
+                        blok kodu, gdy warunek jest prawdziwy (true), to kod się wykona
+                    }</code></pre>
                     <p class="section__paragraph">else</p>
-                    <code class="section__code">if (warunek) { <br>
-                        // wykonaj kod jeśli true <br>
-                        } else { <br>
-                        // wykonaj kod jeśli false <br>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">if (warunek) {
+                        wykonaj kod jeśli true
+                        } else {
+                        wykonaj kod jeśli false
                         }
-                    </code>
+                    </code></pre>
                     <p class="section__paragraph">else if</p>
-                    <code class="section__code">if (warunek) { <br>
-                        // wykonaj kod jeśli true, jeśli false przejdź do następnego if <br>
-                        } else if (warunek) { <br>
-                        // wykonaj kod jeśli true <br>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">if (warunek) {
+                        wykonaj kod jeśli true, jeśli false przejdź do następnego if
+                        } else if (warunek) { 
+                        wykonaj kod jeśli true <br>
                         }
-                    </code>
+                    </code></pre>
                     <p class="section__paragraph">Zapis skrócony</p>
-                    <code class="section__code">(zmienna1 > zmienna2) ? console.log('true') : console.log('false')
-                        <br> <br>(warunek) ? kod wykonuje gdy warunek jest true : kod wykonuje gdy warunek jest false
-                    </code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">(zmienna1 > zmienna2) ? console.log('true') : console.log('false')
+                        
+                        (warunek) ? kod wykonuje gdy warunek jest true : kod wykonuje gdy warunek jest false
+                    </code></pre>
                     <p class="section__paragraph">Switch - przełącznik</p>
-                    <code class="section__code">const fruit = 'banana'; <br>
-                        switch (fruit) { <br> case apple: <br>console.log(kod się nie wykona); <br>break; <br> case
-                        banana: <br>console.log(kod się wykona); <br>break; <br>default: <br> console.log(kod się wykona
-                        tylko wtedy, gdy żadne z powyższych warunków nie zostaną spełnione); <br>}</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">const fruit = 'banana';
+
+                        switch (fruit) {
+                        case apple: 
+                        console.log(kod się nie wykona);
+                        break; 
+                        case banana: 
+                        console.log(kod się wykona); 
+                        break; 
+                        default: 
+                        console.log(kod się wykona tylko wtedy, gdy żadne z powyższych warunków nie zostaną spełnione);
+                        }</code></pre>
                     <section class="card">
                         <h4 class="card__header">Troszkę logicznego śmiechu :)</h4>
                         <a class="card__link"
@@ -266,14 +305,16 @@
                             </ul>
                         </section>
                         <p class="section__paragrapf">Stworzenie funkcji</p>
-                        <code class="section__code">function calculate(x) { <br>
-                            x = x + 5; <br>
-                            console.log(x); <br>
-                            return x*8; <br>
+                        <pre class="data-pre data-pre--white-space">
+                        <code class="language-js section__code">function calculate(x) {
+                            x = x + 5;
+                            console.log(x);
+                            return x*8;
                             }
-                        </code>
+                        </code></pre>
                         <p class="section__paragrapf">Wywołanie funkcji</p>
-                        <code class="section__code">calculate(5);</code>
+                        <pre class="data-pre data-pre--white-space">
+                        <code class="language-js section__code">calculate(5);</code></pre>
                         <section class="card">
                             <h4 class="card__header">Po co funkcje?</h4>
                             <ul class="card__list">
@@ -284,13 +325,15 @@
                             </ul>
                         </section>
                         <p class="section__paragrph">(Fat) arrow functions - funkcja strzałkowa</p>
-                        <code class="section__code">const calculate = (x) => { <br>
-                            x = x + 5; <br>
-                            return x*8; <br>
+                        <pre class="data-pre data-pre--white-space">
+                        <code class="language-js section__code">const calculate = (x) => {
+                            x = x + 5;
+                            return x*8;
                             }
-                        </code>
+                        </code></pre>
                         <p class="section__paragrph">Skrócony zapis</p>
-                        <code class="section__code">const calculate = x => (x+5)*8 <br></code>
+                        <pre class="data-pre data-pre--white-space">
+                        <code class="language-js section__code">const calculate = x => (x+5)*8</code></pre>
                         <section class="card">
                             <h4 class="card__header">Funkcja strzałkowa</h4>
                             <ul class="card__list">
@@ -360,12 +403,13 @@
                     <p class="section__paragraph">Każda przeglądarka posiada swoje style domyślne. Normalizację i
                         reset stosujemy, żeby te style były wszędzie takie same.</p>
                     <p class="section__paragrph">Przykładowy reset:</p>
-                    <code class="section__code">* { <br>
-                        margin:0; <br>
-                        padding: 0; <br>
-                        box-sizing: border box; <br>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-css section__code">* {
+                        margin:0;
+                        padding: 0;
+                        box-sizing: border box;
                         }
-                    </code>
+                    </code></pre>
                     <p class="section__paragraph">Plik normalizacji: <a class="section__link"
                             href="https://necolas.github.io/normalize.css/">https://necolas.github.io/normalize.css/</a>
                     </p>
