--- a/sixth.html
+++ b/sixth.html
@@ -23,8 +23,8 @@
                 miejsce jest moim cyfrowym notatnikiem. </p>
         </section>
         <ul class="menu__list">
-            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">pierwszy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">rozdział
+                        pierwszy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Warstwy</li>
                         <li class="menu__item">HTML</li>
@@ -32,8 +32,8 @@
                         <li class="menu__item">Programowanie</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">drugi
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">rozdział
+                        drugi</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Organizacja nauki/pracy</li>
                         <li class="menu__item">HTML - znaczniki i atrybuty</li>
@@ -43,8 +43,8 @@
                         <li class="menu__item">Terminal</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">trzeci
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">rozdział
+                        trzeci</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Git</li>
                         <li class="menu__item">Box model</li>
@@ -52,8 +52,8 @@
                         <li class="menu__item">DOM</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">czwarty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">rozdział
+                        czwarty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">JavaScript</li>
                         <li class="menu__item">Funkcja w JS</li>
@@ -64,8 +64,8 @@
                         <li class="menu__item">Tło</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">piąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">rozdział
+                        piąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Formularze</li>
                         <li class="menu__item">Grid</li>
@@ -74,8 +74,8 @@
                         <li class="menu__item">Hamburger</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">szósty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">rozdział
+                        szósty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Obiekty</li>
                         <li class="menu__item">Pseudo*</li>
@@ -84,8 +84,8 @@
                         <li class="menu__item">Starter kit</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">siódmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">rozdział
+                        siódmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Prefiksy</li>
                         <li class="menu__item">Google fonts</li>
@@ -96,8 +96,8 @@
                         <li class="menu__item">Dane</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">ósmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">rozdział
+                        ósmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Przejścia</li>
                         <li class="menu__item">Animacje</li>
@@ -107,8 +107,8 @@
                         <li class="menu__item">PWA</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">dziewiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">rozdział
+                        dziewiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">API</li>
                         <li class="menu__item">CSS</li>
@@ -116,16 +116,34 @@
                         <li class="menu__item">Typografia</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">dziesiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">rozdział
+                        dziesiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Multimedia</li>
                         <li class="menu__item">Bootstrap</li>
                         <li class="menu__item">Kombinatory</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">jedenasty
-                        tydzień</strong></a></li>
+            <li class="menu__item"><a class="menu__link" href="dev-tools.html"><strong class="strong__header">Dev
+                        tools</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">Do poczytania</li>
+                        <li class="menu__item">Dokumentacja</li>
+                        <li class="menu__item">Narzędzia</li>
+                        <li class="menu__item">Do obejrzenia</li>
+                        <li class="menu__item">Lista frontendu</li>
+                    </ul>
+                </a></li>
+            <li class="menu__item"><a class="menu__link" href="game.html"><strong class="strong__header">Dev
+                        game</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">CODE COMBAT</li>
+                        <li class="menu__item">CSS Diner</li>
+                        <li class="menu__item">Flexbox Froggy</li>
+                        <li class="menu__item">Grid Garden</li>
+                        <li class="menu__item">Codewars</li>
+                    </ul>
+                </a></li>
         </ul>
     </nav>
     <main class="main">
@@ -147,7 +165,7 @@
                     </ul>
                 </nav>
             </header>
-            <h2 class="article__header">Szósty tydzień nauki</h2>
+            <h2 class="article__header">Rozdział szósty</h2>
             <div class="wrapper">
                 <section class="section" id="object">
                     <h3 class="section__header">Objekty</h3>
@@ -157,41 +175,46 @@
                     <p class="section__paragraph">klucz - musi być unikalny w ramach obiektu</p>
                     <p class="section__paragraph">wartość - prymitywy / funkcje / zagnieżdżenia</p>
                     <p class="ection__paragraph">Dot notation - notacja kropkowa:</p>
-                    <code class="section__code">const deathStar = { <br>
-                        diameter: 120000, <br>
-                        fire: (target) => { <br>
-                        console.log(`${target} destroyed 💥`) <br>
-                        }, <br>
-                        isOperating: true, <br>
-                        levels: 357, <br>
-                        name: 'Death Star', <br>
-                        population: 10000, <br>
-                        } <br> <br>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">const deathStar = {
+                        diameter: 120000,
+                        fire: (target) => {
+                        console.log(`${target} destroyed 💥`)
+                        },
+                        isOperating: true,
+                        levels: 357,
+                        name: 'Death Star',
+                        population: 10000,
+                        }
+
                         deathStar.population
-                    </code>
+                    </code></pre>
                     <p class="section__paragraph">Bracket notation - notacja nawiasów:</p>
-                    <code class="section__code">const deathStar = { <br>
-                        diameter: 120000, <br>
-                        fire: (target) => { <br>
-                        console.log(`${target} destroyed 💥`) <br>
-                        }, <br>
-                        isOperating: true, <br>
-                        levels: 357, <br>
-                        name: 'Death Star', <br>
-                        population: 10000, <br>
-                        } <br> <br>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">const deathStar = {
+                        diameter: 120000,
+                        fire: (target) => {
+                        console.log(`${target} destroyed 💥`)
+                        },
+                        isOperating: true,
+                        levels: 357,
+                        name: 'Death Star', 
+                        population: 10000, 
+                        }
+
                         deathStar["population"]
-                    </code>
+                    </code></pre>
                     <p class="section__paragrap">JSON = JavaScript Object Notation, uniwersalny format wymiany danych.
                     </p>
-                    <code class="section__code">{ <br>
-                        "diameter": 120000, <br>
-                        "isOperating": true, <br>
-                        "levels": 357, <br>
-                        "name": "Death Star", <br>
-                        "population": 10000, <br>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">{
+                        "diameter": 120000,
+                        "isOperating": true,
+                        "levels": 357,
+                        "name": "Death Star",
+                        "population": 10000,
                         }
-                    </code>
+                    </code></pre>
                 </section>
                 <section class="section" id="pseudo">
                     <h3 class="section__header">Pseudoelementy</h3>
@@ -268,7 +291,8 @@
                 <section class="section" id="starter">
                     <h3 class="section__header">WTF GULP STARTER KIT</h3>
                     <p class="section__paragrap">Pobranie WTF GULP STARTER KIT:</p>
-                    <code class="section__code">git clone https://github.com/maciejkorsan/wtf-gulp-starter</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-shell section__code">git clone https://github.com/maciejkorsan/wtf-gulp-starter</code></pre>
                     <p class="section__paragarph">Gulp - task runner, służy do automatyzacji zadań w projekcie.</p>
                     <a href="https://gulpjs.com" class="section__link">https://gulpjs.com</a>
                     <p class="section__paragraph"><strong>npm install gulp-cli --global</strong> - instalacja gulpa
